updated instagram link
added “https://“

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>FCC Portfolio Page - Josh Soucie2</title>
-  
-  
+
+
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
 <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css'>
 
       <link rel="stylesheet" href="css/style.css">
 
-  
+
 </head>
 
 <body>
@@ -27,8 +27,8 @@
       <h2 class="text-muted">Engineer, Hacker, Entrepreneur, Globetrotter</h2>
     </div>
   </div>
-  
-  
+
+
 
 
 </article>
@@ -46,7 +46,7 @@
   <a href="https://www.linkedin.com/in/joshuasoucie/">
     <i class="fa fa-linkedin-square fa-3x" aria-hidden="false"></i>
   </a>
-  <a href="www.instagram.com/joshsoucie/">
+  <a href="https://www.instagram.com/joshsoucie/">
     <i class="fa fa-instagram fa-3x" aria-hidden="false"></i>
   </a>
   <a href="https://open.spotify.com/user/124000948">
@@ -56,6 +56,6 @@
   <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
 
-  
+
 </body>
 </html>
